<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.hahn_moyers_calculatorapp.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:id="@+id/button1"
        android:theme="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@android:color/holo_green_light"
        android:backgroundTint="@color/abc_background_cache_hint_selector_material_dark"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_above="@+id/button0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        android:id="@+id/button2"
        android:theme="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@android:color/holo_green_light"
        android:backgroundTint="@color/abc_background_cache_hint_selector_material_dark"
        android:layout_above="@+id/buttonperiod"
        android:layout_toRightOf="@+id/button1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button3"
        android:id="@+id/button3"
        android:theme="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@android:color/holo_green_light"
        android:backgroundTint="@color/abc_background_cache_hint_selector_material_dark"
        android:layout_above="@+id/buttonperiod"
        android:layout_toRightOf="@+id/button2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button4"
        android:id="@+id/button4"
        android:theme="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@android:color/holo_green_light"
        android:backgroundTint="@color/abc_background_cache_hint_selector_material_dark"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_above="@+id/button1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button5"
        android:id="@+id/button5"
        android:theme="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@android:color/holo_green_light"
        android:backgroundTint="@color/abc_background_cache_hint_selector_material_dark"
        android:layout_toRightOf="@+id/button4"
        android:layout_above="@+id/button2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button6"
        android:id="@+id/button6"
        android:theme="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@android:color/holo_green_light"
        android:backgroundTint="@color/abc_background_cache_hint_selector_material_dark"
        android:layout_above="@+id/button3"
        android:layout_toRightOf="@+id/button5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button7"
        android:id="@+id/button7"
        android:theme="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@android:color/holo_green_light"
        android:backgroundTint="@color/abc_background_cache_hint_selector_material_dark"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/button4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button8"
        android:id="@+id/button8"
        android:theme="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@android:color/holo_green_light"
        android:backgroundTint="@color/abc_background_cache_hint_selector_material_dark"
        android:layout_above="@+id/button5"
        android:layout_toRightOf="@+id/button7" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button9"
        android:id="@+id/button9"
        android:theme="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@android:color/holo_green_light"
        android:backgroundTint="@color/abc_background_cache_hint_selector_material_dark"
        android:layout_above="@+id/button6"
        android:layout_toRightOf="@+id/button8" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonX"
        android:id="@+id/buttonX"
        android:theme="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@android:color/holo_green_light"
        android:backgroundTint="@color/abc_background_cache_hint_selector_material_dark"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_toRightOf="@+id/button3"
        android:layout_above="@+id/buttondiv" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button0"
        android:id="@+id/button0"
        android:theme="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@android:color/holo_green_light"
        android:backgroundTint="@color/abc_background_cache_hint_selector_material_dark"
        android:layout_above="@+id/buttonB"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonperiod"
        android:id="@+id/buttonperiod"
        android:theme="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@android:color/holo_green_light"
        android:backgroundTint="@color/abc_background_cache_hint_selector_material_dark"
        android:layout_above="@+id/buttonB"
        android:layout_toRightOf="@+id/button0"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonC"
        android:id="@+id/buttonC"
        android:theme="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@android:color/holo_green_light"
        android:backgroundTint="@color/abc_background_cache_hint_selector_material_dark"
        android:layout_alignParentStart="false"
        android:layout_marginTop="115dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonB"
        android:id="@+id/buttonB"
        android:theme="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@android:color/holo_green_light"
        android:backgroundTint="@color/abc_background_cache_hint_selector_material_dark"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/buttonC"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonplus"
        android:id="@+id/buttonplus"
        android:theme="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@android:color/holo_green_light"
        android:backgroundTint="@color/abc_background_cache_hint_selector_material_dark"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/buttonminus"
        android:layout_toRightOf="@+id/button9" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonminus"
        android:id="@+id/buttonminus"
        android:theme="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@android:color/holo_green_light"
        android:backgroundTint="@color/abc_background_cache_hint_selector_material_dark"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/buttonX"
        android:layout_toRightOf="@+id/button6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttondiv"
        android:id="@+id/buttondiv"
        android:theme="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@android:color/holo_green_light"
        android:backgroundTint="@color/abc_background_cache_hint_selector_material_dark"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/buttoneq"
        android:layout_toRightOf="@+id/buttonperiod" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttoneq"
        android:id="@+id/buttoneq"
        android:theme="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@android:color/holo_green_light"
        android:backgroundTint="@color/abc_background_cache_hint_selector_material_dark"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/buttonB" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:id="@+id/calcView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentRight="true"
        android:textAlignment="textEnd"
        android:textColor="@android:color/holo_green_light"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:layout_above="@+id/button7" />

</RelativeLayout>
